<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_background"
        android:hint="full name"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/login_background"
        android:hint="e-mail"
        />

    <EditText
        android:padding="10dp"
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_background"
        android:hint="password"
        android:inputType="textPassword"
         />

    <Button
        android:id="@+id/signup_button"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="Sign Up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/goToLogin_input"
        android:textColor="@color/grey"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>