<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NotesTakerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_notes"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView_save"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_save"
                android:padding="6dp"
                android:background="@android:color/transparent"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/editText_title"
        android:hint="Title: "
        android:textColorHint="@color/black"
        android:padding="6dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/editText_notes"
        android:hint="Add Notes: "
        android:textColorHint="@color/black"
        android:padding="6dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </EditText>

</LinearLayout>